--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "Sample WebExtension",
+  "name": "PR Bookmark Generator",
   "version": "0.0.0",
 
   "icons": {
@@ -9,9 +9,9 @@
     "48": "assets/icons/favicon-48.png",
     "128": "assets/icons/favicon-128.png"
   },
-  "description": "Sample description",
+  "description": "Bookmark storage and generation for active Github PRs.",
   "homepage_url": "https://github.com/abhijithvijayan/web-extension-starter",
-  "short_name": "Sample Name",
+  "short_name": "PR Bookmarks",
 
   "permissions": [
     "activeTab",
@@ -22,9 +22,9 @@
 
   "content_security_policy": "script-src 'self'; object-src 'self'",
 
-  "__chrome|firefox__author": "abhijithvijayan",
+  "__chrome|firefox__author": "rylancole",
   "__opera__developer": {
-    "name": "abhijithvijayan"
+    "name": "rylancole"
   },
 
   "__firefox__applications": {
@@ -44,7 +44,7 @@
       "48": "assets/icons/favicon-48.png",
       "128": "assets/icons/favicon-128.png"
     },
-    "default_title": "tiny title",
+    "default_title": "PR Bookmarks",
     "__chrome|opera__chrome_style": false,
     "__firefox__browser_style": false
   },
