--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# ignore haters
-haters/
-
 ### Node ###
 # Logs
 logs
@@ -111,3 +108,6 @@ dist/
 !.yarn/releases
 !.yarn/plugins
 .pnp.*
+
+# secrets
+secrets.*
