--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "lint:fix": "eslint . --ext .ts,.tsx --fix"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.11",
     "@babel/runtime": "^7.12.5",
     "advanced-css-reset": "^1.2.2",
     "axios": "^0.21.1",
+    "graphql": "^15.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "webext-base-css": "^1.2.0",
